--- a/shelfie/package.json
+++ b/shelfie/package.json
@@ -3,6 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "body-parser": "^1.18.3",
+    "dotenv": "^6.0.0",
+    "express": "^4.16.3",
+    "main": "server/index.js",
+    "massive": "^5.0.0",
+    "proxy": "http://localhost:4000",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-scripts": "1.1.4"
